<resources>
    <string name="app_name">MeRegister</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password"> <u>Forgot Password?</u></string>
    <string name="not_a_member">Not a member?</string>
    <string name="create_account">Create account</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="sign_out">Sign Out</string>
    <string name="full_name_info">Full Name :</string>
    <string name="age_info">Age :</string>
    <string name="email_info">Email :</string>
    <string name="password_info">Password :</string>
    <string name="reset_password">Reset Password</string>
</resources>